# estif-bingo-advanced

./: .gitattributes  package-lock.json  pyproject.toml
game-server/: .env  package-lock.json  package.json  server.js
game-server/data/: cartelas.json  cartelas_1000.csv
game-server/migrations/: 001_init.sql  002_add_commission_log.sql  003_add_telegram_tables.sql
game-server/public/: admin.html  player.html
game-server/public/assets/css/: admin.css  components.css  main.css
game-server/public/assets/js/: admin.js  cartela.js  player.js  socket.js  sound.js  utils.js
game-server/scripts/: generateCartelasFromCSV.js
game-server/src/: server.js
game-server/src/api/: admin.js  botBridge.js  game.js
game-server/src/config/: index.js
game-server/src/db/: pool.js
game-server/src/game/: cartela.js  gameState.js  rewardPool.js  roundManager.js
game-server/src/middleware/: auth.js  rateLimit.js  security.js
game-server/src/services/: botClient.js
game-server/src/socket/: index.js
game-server/src/utils/: helpers.js  logger.js
telegram-bot/: .env  package.json  requirements.txt  run.py  run_migrations.py  test_all.py  test_api.py  test_bot.py  test_db.py
telegram-bot/bot/: __init__.py  config.py  main.py
telegram-bot/bot/api/: __init__.py  auth.py  balance_ops.py  commission.py  game_api.py  webhooks.py
telegram-bot/bot/db/: __init__.py  database.py
telegram-bot/bot/handlers/: __init__.py  admin_commands.py  balance.py  bingo_otp.py  cashout.py  contact.py  deposit.py  game.py  invite.py  register.py  start.py  transfer.py
telegram-bot/bot/keyboards/: __init__.py  game_keyboards.py  menu.py
telegram-bot/bot/texts/: __init__.py  emojis.py  game_texts.py  locales.py
telegram-bot/bot/utils/: __init__.py  logger.py  otp.py  security.py
telegram-bot/migrations/: 001_users.sql  002_withdrawals.sql  003_otp.sql  004_auth_codes.sql  005_commission_settings.sql  006_add_indexes.sql
